# poetry-aws-plugin

./: README.md  pyproject.toml
poetry_aws_plugin/: plugin.py
