[tool.poetry]
name = "poetry-aws-plugin"
version = "0.1.0"
description = ""
authors = ["Song Huang <xiasongh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.71"
poetry = "^1.7.0"

[tool.poetry.plugins."poetry.plugin"]
poetry-aws-plugin = "poetry_aws_plugin.plugin:PoetryAwsPlugin"

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
